# SaucisseLand-WebSite

./: .gitignore  ReadMe.md  app.py  database.db  example.env  init.sql  pyproject.toml  serve.py  waitress.ini  wsgi.py
src/saucisseland/: __init__.py  __main__.py  database.py  logger.py  routes.py
static/: 404.css  404.css.backup  style.css  style.css.backup
templates/: 404.html  article.html  base.html  blague.html  contact.html  index.html  legal.html  mentions_legales.html  nouvel_article.html  template.html
