[project]
name = "saucisseland-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blagues-api>=1.0.4",
    "flask>=3.1.1",
    "markdown>=3.8",
    "pylint>=3.3.7",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
